--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -344,6 +344,11 @@
       display: inline-block;
       padding: 0;
       position: relative;
+      &:last-child{
+        a{
+          padding-right: 0;
+        }
+      }
 
       &.active {
         position: relative;
